--- a/views/pages/admin/editShipment.ejs
+++ b/views/pages/admin/editShipment.ejs
@@ -8,7 +8,7 @@
 <body>
     <div class="mb-5 secondHead-admin">
         <div class="secondHead-content">
-            <h1>เพิ่มการขนส่ง</h1>
+            <h1>แก้ไขการขนส่ง</h1>
             <!-- <ol class="list-unstyled d-flex ">
                 <li class="breadcrumb-item"><a class="link-light" href="#">หน้าแรก</a></li>
                 <li class="active text-light ms-2">/ สินค้า</li>
