--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: rgb(250, 250, 250) !important;
+    background-color: rgb(255, 255, 255) !important;
 }
 
 p,
@@ -749,9 +749,9 @@ input.cart-cb {
     background-color: white;
     border-radius: 10px;
     margin: 10px;
-    box-shadow: 0px 0px 15px #0000002d;
+    box-shadow: 0px 0px 10px #00000021;
     overflow: hidden;
-
+    border: solid 4px #00000000;
 }
 
 .symbol-sum {
