--- a/views/pages/admin/addOption.ejs
+++ b/views/pages/admin/addOption.ejs
@@ -55,7 +55,8 @@
                                         <div class="form-outline">
                                             <input type="text" name="option[]" class="sub-option-name form-control"
                                                 id="optionName" required>
-                                            <label class="form-label" for="optionName">ชื่อตัวเลือก</label>
+                                            <label class="form-label" for="optionName">ชื่อตัวเลือก <span
+                                                    class="text-danger ms-1">*</span></label>
                                             <div class="invalid-feedback">
                                                 กรุณากรอกชื่อตัวเลือก
                                             </div>
@@ -65,7 +66,8 @@
                                         <div class="form-outline">
                                             <input type="number" name="option_price[]"
                                                 class="sub-option-price form-control" value="0" required>
-                                            <label class="form-label">ราคาต่อหน่วย</label>
+                                            <label class="form-label">ราคาต่อหน่วย <span
+                                                    class="text-danger ms-1">*</span></label>
                                         </div>
                                     </div>
                                 </div>
