--- a/views/pages/admin/admin_dashborad.ejs
+++ b/views/pages/admin/admin_dashborad.ejs
@@ -32,7 +32,7 @@
         <% const cancel = orders.filter(row => row.order_status == "cancel") %>
         <div class="d-flex db-first-row">
             <div class="minisum-box mb-3 w-75">
-                <div class="symbol-sum h-100" style="background-color: #005fcd;">
+                <div class="symbol-sum h-100 alert-info">
                     <i class="fa-solid fa-hourglass-start me-1"></i>
                 </div>
                 <div class="m-3 w-75 h-100">
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="minisum-box mb-3 w-75">
-                <div class="symbol-sum h-100" style="background-color: #ffd500;">
+                <div class="symbol-sum h-100 alert-warning">
                     <i class="fa-regular fa-clock me-1"></i>
                 </div>
                 <div class="m-3 w-75 h-100">
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="minisum-box mb-3 w-75">
-                <div class="symbol-sum h-100" style="background-color: #9f9789;">
+                <div class="symbol-sum h-100 alert-secondary">
                     <i class="fa-solid fa-gears me-1"></i>
                 </div>
                 <div class="m-3 w-75 h-100">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="minisum-box mb-3 w-75">
-                <div class="symbol-sum h-100" style="background-color: #a56800;">
+                <div class="symbol-sum h-100" style="background-color: #ffd4a2; color: #c37318;">
                     <i class="fa-solid fa-box me-1"></i>
                 </div>
                 <div class="m-3 w-75 h-100">
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="minisum-box mb-3 w-75">
-                <div class="symbol-sum h-100" style="background-color: #006010;">
+                <div class="symbol-sum h-100 alert-success">
                     <i class="fa-solid fa-truck-fast me-1"></i>
                 </div>
                 <div class="m-3 w-75 h-100">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="minisum-box mb-3 w-75">
-                <div class="symbol-sum h-100" style="background-color: #c30000;">
+                <div class="symbol-sum h-100 alert-danger">
                     <i class="fa-solid fa-circle-xmark me-1"></i>
                 </div>
                 <div class="m-3 w-75 h-100">
@@ -87,153 +87,252 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col card m-2" style="height: 400px;">
-                <div class="card-body">
-                    <h3 class="mx-3 mt-2">ยอดขาย</h3>
-                    <canvas id="orderChart" class="w-100"></canvas>
-                </div>
-            </div>
-            <div class="col card m-2" style="height: 400px;">
-                <div class="card-body">
-                    <h3 class="mx-3 mt-2">สินค้าขายดี</h3>
-                    <canvas id="productpieChart" class="m-auto"></canvas>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col card m-2">
-                <div class="card-body">
-                    <h3 class="mt-3">ออเดอร์ล่าสุด</h3>
-                    <table class="table align-middle mb-0 mt-0" id="table">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>ออเดอร์</th>
-                                <th>สินค้า</th>
-                                <th>ผู้สั่ง</th>
-                                <th>วันที่สั่ง</th>
-                                <th>สถานะ</th>
-                                <th>ยอดรวม</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-
-
-                        <tbody>
-                            <% let couponDiscount = 0; %>
-                            <% orders.forEach((order, index) => { %>
-                            <% let shipmentprice = order.shipment_price; %>
-                            <% if (order.discount != null) { %>
-                            <% couponDiscount = order.discount; %>
+        <div class="m-0">
+            <div class="row mt-4">
+                <div class="col m-2 border rounded-1" style="height: 400px;">
+                    <div class="p-2">
+                        <div class="d-flex justify-content-between">
+                            <h3 class="mx-3 mt-2">ยอดขาย</h3>
+                            <% let getYear = []; %>
+                            <% payments.forEach((payment) => { %>
+                            <% const date = new Date(payment.paid_date); %>
+                            <% const year = date.getFullYear(); %>
+                            <% if (!getYear.includes(year)) { %>
+                            <% getYear.push(year); %>
                             <% } %>
-                            <tr>
-                                <td style="width: 50px;">
-                                    <%= index %>
-                                </td>
-                                <td>
-                                    <a href="/admin/order/<%= order.order_id %>" class="btn btn-link btn-sm">
-                                        #<%= order.order_id %>
-                                    </a>
-                                </td>
-                                <td>
-                                    <% let sumprice = 0; %>
-                                    <% order.order_detail.forEach((detail) => { %>
-                                    <% sumprice += detail.price %>
-                                    - <%= detail.productName %> <br>
-                                    <% }) %>
-                                </td>
-                                <td>
-                                    <%= order.userfullname %>
-                                </td>
-                                <td> <%= datetimeLocal(order.order_date) %></td>
-                                <td class="status-row text-center">
-                                    <% if (order.order_status === 'waitpay') {%>
-                                    <div class=" alert-warning p-2 rounded">
-                                        รอชำระ
-                                    </div>
-                                    <%} else if (order.order_status === 'pending') {%>
-                                    <div class="alert-warning p-2 rounded">รอตรวจสอบ</div>
-                                    <% } else if (order.order_status === 'produce') {%>
-                                    <div class="alert-info  p-2 rounded">
-                                        กำลังผลิต
-                                    </div>
-                                    <% } else if (order.order_status === 'shipping') {%>
-                                    <div class="alert-info p-2 rounded">
-                                        กำลังจัดส่ง
-                                    </div>
-                                    <% } else if (order.order_status === 'success') {%>
-                                    <div class="alert-success p-2 rounded">
-                                        จัดส่งสำเร็จ
-                                    </div>
-                                    <% } else if (order.order_status === 'cancel') {%>
-                                    <div class="alert-danger p-2 rounded">
-                                        ยกเลิก
-                                    </div>
-                                    <% } %>
-                                </td>
-                                <% let vat = sumprice * 7 / 100; %>
-                                <td> <%= money.format((sumprice + shipmentprice + vat) - couponDiscount) %></td>
-                                <td>
-                                    <a href="/admin/order/<%= order.order_id %>" class="btn btn-primary">
-                                        <i class="fa-solid fa-eye fs-5"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                            <% }) %>
-                        </tbody>
-                    </table>
-
+                            <% }); %>
+                            <select class="form-select align-self-center" id="pm_select"
+                                style="width: 150px; height: fit-content;">
+                                <% getYear.forEach((year) => { %>
+                                <option value="<%= year %>"><%= year %></option>
+                                <% }) %>
+                            </select>
+                        </div>
+                        <% getYear.forEach((year, index) => { %>
+                        <canvas id="orderChart<%= year %>" class="w-100"></canvas>
+                        <% }) %>
+                    </div>
+                </div>
+                <div class="col m-2 border rounded-1" style="height: 400px;">
+                    <div class="p-2">
+                        <h3 class="mx-3 mt-2">สินค้าที่ขายได้</h3>
+                        <canvas id="productpieChart" class="m-auto"></canvas>
+                    </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col m-2 border rounded-1">
+                    <div class="p-2">
+                        <h3 class="mt-3">ออเดอร์ล่าสุด</h3>
+                        <table class="table align-middle mb-0 mt-0" id="table">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>ออเดอร์</th>
+                                    <th>สินค้า</th>
+                                    <th>ผู้สั่ง</th>
+                                    <th>วันที่สั่ง</th>
+                                    <th>สถานะ</th>
+                                    <th>ยอดรวม</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
 
+
+                            <tbody>
+                                <% let couponDiscount = 0; %>
+                                <% let i = 0; %>
+                                <% orders.forEach((order, index) => { %>
+                                <% i++ %>
+                                <% let shipmentprice = order.shipment_price; %>
+                                <% if (order.discount != null) { %>
+                                <% couponDiscount = order.discount; %>
+                                <% } %>
+
+                                <% if (i >= 4) { %>
+                                <tr>
+                                    <td style="width: 50px;">
+                                        <%= index %>
+                                    </td>
+                                    <td>
+                                        <a href="/admin/order/<%= order.order_id %>" class="btn btn-link btn-sm">
+                                            #<%= order.order_id %>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <% let sumprice = 0; %>
+                                        <% order.order_detail.forEach((detail) => { %>
+                                        <% sumprice += detail.price %>
+                                        - <%= detail.productName %> <br>
+                                        <% }) %>
+                                    </td>
+                                    <td>
+                                        <%= order.userfullname %>
+                                    </td>
+                                    <td> <%= datetimeLocal(order.order_date) %></td>
+                                    <td class="status-row text-center">
+                                        <% if (order.order_status === 'waitpay') {%>
+                                        <div class=" alert-warning p-2 rounded">
+                                            รอชำระ
+                                        </div>
+                                        <%} else if (order.order_status === 'pending') {%>
+                                        <div class="alert-warning p-2 rounded">รอตรวจสอบ</div>
+                                        <% } else if (order.order_status === 'produce') {%>
+                                        <div class="alert-info  p-2 rounded">
+                                            กำลังผลิต
+                                        </div>
+                                        <% } else if (order.order_status === 'shipping') {%>
+                                        <div class="alert-info p-2 rounded">
+                                            กำลังจัดส่ง
+                                        </div>
+                                        <% } else if (order.order_status === 'success') {%>
+                                        <div class="alert-success p-2 rounded">
+                                            จัดส่งสำเร็จ
+                                        </div>
+                                        <% } else if (order.order_status === 'cancel') {%>
+                                        <div class="alert-danger p-2 rounded">
+                                            ยกเลิก
+                                        </div>
+                                        <% } %>
+                                    </td>
+                                    <% let vat = sumprice * 7 / 100; %>
+                                    <td> <%= money.format((sumprice + shipmentprice + vat) - couponDiscount) %></td>
+                                    <td>
+                                        <a href="/admin/order/<%= order.order_id %>" class="btn btn-primary">
+                                            <i class="fa-solid fa-eye fs-5"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                                <% } %>
+                                <% }) %>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     </div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.min.js"></script>
+<script src="https://www.chartjs.org/samples/2.9.4/utils.js"></script>
 <script>
     $('.table').DataTable({
         order: [
-            [5, 'desc']
+            [0, 'desc']
         ],
-    });
-    // JavaScript code to create your chart using Chart.js
-    var ctx = document.getElementById('orderChart').getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar', // Change the chart type as needed
-        data: {
-            labels: ['Label 1', 'Label 2', 'Label 3'],
-            datasets: [{
-                label: 'Dataset Label',
-                data: [10, 20, 30],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                ],
-                borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                ],
-                borderWidth: 1,
-            }],
-        },
-        options: {
-            responsive: false,
-        },
+        paging: false,
+        info: false,
     });
 
+
+    const payments = JSON.parse('<%- JSON.stringify(payments) %>');
+    const paymentSum = {};
+    const monthOrder = ['มกราคม', 'กุมภาพันธ์', 'มีนาคม', 'เมษายน', 'พฤษภาคม', 'มิถุนายน', 'กรกฏาคม', 'สิงหาคม',
+        'กันยายน', 'ตุลาคม', 'พฤศจิกายน', 'ธันวาคม'
+    ];
+    payments.forEach((payment) => {
+        const date = new Date(payment.paid_date);
+        const year = date.getFullYear();
+        const month = date.toLocaleString('th-TH', {
+            month: 'long'
+        });
+        const amount = payment.amount;
+        if (!paymentSum[year]) {
+            paymentSum[year] = {}; // Initialize an empty object for the year
+        }
+
+        if (!paymentSum[year][month]) {
+            paymentSum[year][month] = 0;
+        }
+
+        paymentSum[year][month] += amount;
+    });
+    console.log(paymentSum);
+
+    const allMonths = monthOrder.slice();
+    // เรียงเดือน
+    const sortedPayment = Object.keys(paymentSum)
+        .sort()
+        .reduce((acc, year) => {
+            acc[year] = paymentSum[year];
+            return acc;
+        }, {});
+
+
+    const yearCharts = [];
+
+    for (const year in sortedPayment) {
+        const sortedYearData = allMonths.reduce((acc, month) => {
+            acc[month] = paymentSum[year][month] || 0;
+            return acc;
+        }, {});
+        var ctx = document.getElementById(`orderChart${year}`).getContext('2d');
+        const amounts = Object.values(sortedYearData);
+        var yearChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: Object.keys(sortedYearData),
+                datasets: [{
+                    label: `รายได้รวมต่อเดือน (${year})`,
+                    data: Object.values(sortedYearData),
+                    backgroundColor: 'rgba(75, 192, 192, 0.2',
+                    borderColor: 'rgba(75, 192, 192, 1',
+                    borderWidth: 1,
+                }],
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                    },
+                },
+            },
+        });
+        yearCharts.push(yearChart);
+        $(`#orderChart${year}`).hide();
+        // $(`#orderChart${Object.keys(sortedPayment)[0]}`).show();
+        $(document).ready(() => {
+            $('#pm_select').change(function () {
+                let getYear = $(this).val();
+                $(`#orderChart${year}`).hide();
+                if (getYear == year) {
+                    $(`#orderChart${$(this).val()}`).show();
+                }
+            }).trigger('change')
+        })
+    }
+
+
+
+
+    const orders = JSON.parse('<%- JSON.stringify(orders) %>');
+    const cateProduct = {
+        bill: 0,
+        sticker: 0,
+        envelope: 0
+    };
+
+    orders.forEach((order) => {
+        order.order_detail.forEach((item) => {
+            const cate = item.categories;
+            // console.log(cate);
+            if (cateProduct[cate] !== undefined) {
+                cateProduct[cate] += 1;
+            }
+        })
+    });
     var ctx = document.getElementById('productpieChart').getContext('2d');
     var myChart = new Chart(ctx, {
-        type: 'pie', // Change the chart type as needed
+        type: 'pie',
         data: {
-            labels: ['Label 1', 'Label 2', 'Label 3'],
+            labels: ['บิล', 'สติ๊กเกอร์', 'ซองจดหมาย'],
             datasets: [{
-                label: 'Dataset Label',
-                data: [10, 20, 30],
+                label: 'จำนวนที่ขายได้',
+                data: [cateProduct.bill, cateProduct.sticker, cateProduct.envelope],
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
