--- a/views/pages/admin/editPromotion.ejs
+++ b/views/pages/admin/editPromotion.ejs
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div style="padding-bottom: 150px;"></div>
-    <div class="box-admin">
+    <div class="box-admin mb-5">
         <form action="/updatePromotion/<%= promotions.promo_id %>" method="post" class="needs-validation" novalidate>
             <div class="card">
                 <div class="mx-4 mt-4 border-bottom">
@@ -205,10 +205,15 @@
                 </table>
             </div> -->
             </div>
-            <button type="submit" class="btn btn-primary btn-block float-end fs-6 my-5 back"
-                style="width: 150px;">บันทึก</button>
+            <div class="w-100 fixed-bottom bg-white border-top" style="z-index: 0;">
+                <div class="m-2 me-5 d-flex justify-content-end">
+                    <!-- <button type="reset" class="btn btn-outline-black me-2 my-2 fs-6">รีเซ็ต</button> -->
+                    <button type="submit" class="btn btn-primary fs-6 my-2" style="width: 150px;">บันทึก</button>
+                </div>
+            </div>
         </form>
-        <!-- <div class="modal fade" id="pickProduct" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    </div>
+    <!-- <div class="modal fade" id="pickProduct" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header border-0">
@@ -243,64 +248,64 @@
             </div>
         </div>
     </div> -->
-        <script>
-            const forms = document.querySelectorAll('.needs-validation')
-            // Loop over them and prevent submission
-            Array.from(forms).forEach(form => {
-                form.addEventListener('submit', event => {
-                    if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    }
+    <script>
+        const forms = document.querySelectorAll('.needs-validation')
+        // Loop over them and prevent submission
+        Array.from(forms).forEach(form => {
+            form.addEventListener('submit', event => {
+                if (!form.checkValidity()) {
+                    event.preventDefault()
+                    event.stopPropagation()
+                }
 
-                    form.classList.add('was-validated')
-                }, false)
-            })
+                form.classList.add('was-validated')
+            }, false)
+        })
 
-            document.querySelectorAll('.form-outline').forEach((formOutline) => {
-                new mdb.Input(formOutline).init();
+        document.querySelectorAll('.form-outline').forEach((formOutline) => {
+            new mdb.Input(formOutline).init();
+        });
+
+        $(function () {
+            $('#product-check').multipleSelect({
+                filter: true,
+                placeholder: 'เลือกสินค้าที่ร่วมรายการ',
+                type: 'optgroup',
+                onClick: function (view) {
+                    $(view).addClass('form-control'); // Apply Bootstrap form-control class
+                    $(view).closest('.ms-container').addClass(
+                        'form-group'); // Apply Bootstrap form-group class
+                }
+
+                // hideOptgroupCheckboxes: false
             });
+        })
 
-            $(function () {
-                $('#product-check').multipleSelect({
-                    filter: true,
-                    placeholder: 'เลือกสินค้าที่ร่วมรายการ',
-                    type: 'optgroup',
-                    onClick: function (view) {
-                        $(view).addClass('form-control'); // Apply Bootstrap form-control class
-                        $(view).closest('.ms-container').addClass(
-                            'form-group'); // Apply Bootstrap form-group class
-                    }
+        $('input[type=radio][name=promoType]').change(function () {
+            if (this.value == 'discount') {
+                $('#unittype').text('%')
+            } else if (this.value == 'giveaway') {
+                $('#unittype').text('ชิ้น')
+            }
+        })
 
-                    // hideOptgroupCheckboxes: false
-                });
-            })
+        $('input[type=radio][name=condition]').change(function () {
+            if (this.value == 'qty') {
+                $('#minAmText').text('ยอดจำนวนสินค้าขั้นต่ำ')
+                $('#unitCondition').text('ชิ้น')
+            } else if (this.value == 'value') {
+                $('#minAmText').text('ยอดสั่งซื้อขั้นต่ำ')
+                $('#unitCondition').text('฿')
+            }
+        })
+        $('#addProduct').click(function () {
+            $('input[name="product"]:checked').each(function () {
+                const id = $(this).val();
+                const img = $(this).data('img')
+                const name = $(this).data('name')
+                const type = $(this).data('type')
 
-            $('input[type=radio][name=promoType]').change(function () {
-                if (this.value == 'discount') {
-                    $('#unittype').text('%')
-                } else if (this.value == 'giveaway') {
-                    $('#unittype').text('ชิ้น')
-                }
-            })
-
-            $('input[type=radio][name=condition]').change(function () {
-                if (this.value == 'qty') {
-                    $('#minAmText').text('ยอดจำนวนสินค้าขั้นต่ำ')
-                    $('#unitCondition').text('ชิ้น')
-                } else if (this.value == 'value') {
-                    $('#minAmText').text('ยอดสั่งซื้อขั้นต่ำ')
-                    $('#unitCondition').text('฿')
-                }
-            })
-            $('#addProduct').click(function () {
-                $('input[name="product"]:checked').each(function () {
-                    const id = $(this).val();
-                    const img = $(this).data('img')
-                    const name = $(this).data('name')
-                    const type = $(this).data('type')
-
-                    const row = ` <tr class='product${id}'>
+                const row = ` <tr class='product${id}'>
                             <td class="img-fluid" style="width: 130px;">
                                 <img src="${img}" alt="" >
                             </td>
@@ -317,33 +322,33 @@
                                 </button>
                             </td>
                         </tr>`
-                    $('tbody').append(row)
-                })
-                $('#pickProduct').modal('hide')
+                $('tbody').append(row)
             })
+            $('#pickProduct').modal('hide')
+        })
 
-            $(document).on('click', '.delete', function () {
-                const id = `product` + $(this).data('id');
-                console.log(id);
-                $(`#${id}`).prop('checked', false);
-                $(this).closest('tr').remove();
-            });
+        $(document).on('click', '.delete', function () {
+            const id = `product` + $(this).data('id');
+            console.log(id);
+            $(`#${id}`).prop('checked', false);
+            $(this).closest('tr').remove();
+        });
 
-            $(document).on('change', 'input[type="checkbox"]', function () {
-                const id = `product` + $(this).data('id');
-                if (!$(this).prop('checked')) {
-                    $(this).closest(`tr.${id}`).remove();
-                }
-            });
+        $(document).on('change', 'input[type="checkbox"]', function () {
+            const id = `product` + $(this).data('id');
+            if (!$(this).prop('checked')) {
+                $(this).closest(`tr.${id}`).remove();
+            }
+        });
 
 
-            const optionArr = JSON.parse('<%- JSON.stringify(selectedProduct) %>');
-            optionArr.forEach(selectedValue => {
-                $(`#product-check option[value="${selectedValue.product_id}"]`)
-                    .prop('selected', true);
-            });
-            $('#promoName').keyup(function () {
-                $('.secondHead-content h5').text($(this).val())
-            })
-        </script>
+        const optionArr = JSON.parse('<%- JSON.stringify(selectedProduct) %>');
+        optionArr.forEach(selectedValue => {
+            $(`#product-check option[value="${selectedValue.product_id}"]`)
+                .prop('selected', true);
+        });
+        $('#promoName').keyup(function () {
+            $('.secondHead-content h5').text($(this).val())
+        })
+    </script>
 </body>
