--- a/views/pages/editCartProduct.ejs
+++ b/views/pages/editCartProduct.ejs
@@ -394,41 +394,27 @@
         let sizePrice
         let qtprice;
 
-        const sizeTiers = JSON.parse('<%- JSON.stringify(sizeTiers) %>');
-        const qtyTiers = JSON.parse('<%- JSON.stringify(qtyTiers) %>');
+        const qtyTiers = JSON.parse('<%- JSON.stringify(tiers) %>');
 
 
-        for (let i = 0; i < qtyTiers.length && qtTier >= qtyTiers[i].quantity; i++) {
-            qtprice = qtyTiers[i].qty_price;
+        for (let i = 0; i < qtyTiers.length; i++) {
+            if (qtTier >= qtyTiers[i].quantity && size == qtyTiers[i].size_unit) {
+                qtprice = qtyTiers[i].price;
+            } else if (typeof qtprice === 'undefined') {
+                qtprice = qtyTiers[0].price[0]
+            }
         };
-        if (typeof qtprice === 'undefined') {
-            qtprice = qtyTiers[0].qty_price;
-        }
 
-        sizePrice = sizeTiers[0].size_price; // Set a default price
-
-        for (let s = 0; s < sizeTiers.length && size == qtyTiers[s].size_unit; s++) {
-            sizePrice = sizeTiers[s].size_price;
-        }
-        // for (let h = 0; h < sizeTiers.length && heightprice >= sizeTiers[h].height; h++) {
-        //     const element = array[s];
-
-        // }
-
-        // if (isNaN(quantity) || isNaN(quantityPerUnit) || isNaN(optionPrice)) {
-        //     $('#total-price').val('Invalid selection');
-        //     return;
-        // }
 
         console.log(`${size}`);
         console.log(`ราคาปริมาณต่อหน่วย : ${qtprice}`);
         // const totalSize = widthprice + heightprice;
-        const perUnitSum = qtprice + sizePrice;
-        const totalPricePerUnit = optionSum + perUnitSum
-        console.log(`${optionSum}, ${sizePrice}, ${qtprice}`);
-        console.log(`${totalPricePerUnit} * ${qtTier}`);
+        // const perUnitSum = qtprice + sizePrice;
+        const totalPricePerUnit = optionSum + qtprice
+        // console.log(`${optionSum}, ${sizePrice}, ${qtprice}`);
+        // console.log(`${totalPricePerUnit} * ${qtTier}`);
         const sumPrice = totalPricePerUnit * qtTier;
-        console.log(sumPrice);
+        // console.log(sumPrice);
 
         $('#sum-price').text(THmoney.format(sumPrice))
         $('#total-price').val(sumPrice);
