--- a/views/pages/product_detail.ejs
+++ b/views/pages/product_detail.ejs
@@ -1,9 +1,10 @@
 <%- include('../partials/header') %>
 <%     function datetimeLocal(datetime) { %>
-    <%   const dt = new Date(datetime); %>
-    <%    dt.setMinutes(dt.getMinutes() - dt.getTimezoneOffset()); %>
-    <%   return dt.toISOString().slice(0, 10) + ' ' + dt.toISOString().slice(11, 16); %>
-    <%  } %>
+<%   const dt = new Date(datetime); %>
+<%    dt.setMinutes(dt.getMinutes() - dt.getTimezoneOffset()); %>
+<%   return dt.toISOString().slice(0, 10) + ' ' + dt.toISOString().slice(11, 16); %>
+<%  } %>
+
 <body class="h-100">
     <div class="container-lg mt-5">
         <div class="row justify-content-between">
@@ -20,7 +21,8 @@
                 <div class="card">
                     <div class="card-header ">
                         <h3 class="mb-0">โปรโมชั่น</h3>
-                        <span>เริ่มโปรโมชั่น <%= datetimeLocal(promotions[0].start_date) %>  <br>สิ้นสุดโปรโมชั่น <%= datetimeLocal(promotions[0].end_date) %></span>
+                        <span>เริ่มโปรโมชั่น <%= datetimeLocal(promotions[0].start_date) %> <br>สิ้นสุดโปรโมชั่น
+                            <%= datetimeLocal(promotions[0].end_date) %></span>
                     </div>
                     <div class="card-body">
                         <% promotions.forEach((promo) => { %>
@@ -457,25 +459,20 @@
 
         let widthprice;
         let heightprice;
-        let sizePrice
         let qtprice;
 
-        const sizeTiers = JSON.parse('<%- JSON.stringify(sizeTiers) %>');
-        const qtyTiers = JSON.parse('<%- JSON.stringify(qtyTiers) %>');
+        const qtyTiers = JSON.parse('<%- JSON.stringify(tiers) %>');
 
 
-        for (let i = 0; i < qtyTiers.length && qtTier >= qtyTiers[i].quantity; i++) {
-            qtprice = qtyTiers[i].qty_price;
+        for (let i = 0; i < qtyTiers.length; i++) {
+            if (qtTier >= qtyTiers[i].quantity && size == qtyTiers[i].size_unit) {
+                qtprice = qtyTiers[i].price;
+            } else if (typeof qtprice === 'undefined') {
+                qtprice = qtyTiers[0].price[0]
+            }
         };
-        if (typeof qtprice === 'undefined') {
-            qtprice = qtyTiers[0].qty_price;
-        }
 
-        sizePrice = sizeTiers[0].size_price; // Set a default price
 
-        for (let s = 0; s < sizeTiers.length && size == qtyTiers[s].size_unit; s++) {
-            sizePrice = sizeTiers[s].size_price;
-        }
         // for (let h = 0; h < sizeTiers.length && heightprice >= sizeTiers[h].height; h++) {
         //     const element = array[s];
 
@@ -486,11 +483,11 @@
         //     return;
         // }
 
-        // console.log(`${size}`);
-        // console.log(`ราคาปริมาณต่อหน่วย : ${qtprice}`);
+        console.log(`${size}`);
+        console.log(`ราคาปริมาณต่อหน่วย : ${qtprice}`);
         // const totalSize = widthprice + heightprice;
-        const perUnitSum = qtprice + sizePrice;
-        const totalPricePerUnit = optionSum + perUnitSum
+        // const perUnitSum = qtprice + sizePrice;
+        const totalPricePerUnit = optionSum + qtprice
         // console.log(`${optionSum}, ${sizePrice}, ${qtprice}`);
         // console.log(`${totalPricePerUnit} * ${qtTier}`);
         const sumPrice = totalPricePerUnit * qtTier;
